# pinocchio-wasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
PLAN/: AUDIT.md  DEVELOPMENT_CHARTER.md  PINOCCHIO_API_GAP_ANALYSIS.md  ROADMAP.md
bindings/python/: pinocchio_wasm.py
examples/js/: node_demo.mjs
include/: pinocchio_wasm.h
js/: pinocchio_wasm.mjs
js/sdk/: runtime.mjs
src/: lib.rs
src/algo/: batch.rs  centroidal.rs  com_energy.rs  constrained.rs  contact.rs  contacts.rs  derivatives.rs  dynamics.rs  energy.rs  ik.rs  jacobian.rs  kinematics.rs  mod.rs  mod.rs.bak  regressors.rs  rollout.rs  solvers.rs
src/autodiff/: mod.rs
src/codegen/: mod.rs
src/collision/: mod.rs
src/core/: error.rs  math.rs  mod.rs  quaternion.rs  spatial.rs
src/ffi/: batch.rs  centroidal.rs  collision.rs  contact.rs  derivatives.rs  dynamics.rs  (+4 more)
tests/: aba_derivatives.rs  advanced_algo.rs  all_terms.rs  batch.rs  centroidal_full.rs  collision.rs  constrained.rs  contact_dynamics.rs  contact_friction.rs  derivatives_full.rs  diagnostics.rs  dynamics.rs  ffi_all_terms.rs  ffi_api.rs  ffi_centroidal_full.rs  ffi_collision.rs  ffi_constrained.rs  ffi_contact.rs  ffi_contact_friction.rs  ffi_derivatives_full.rs  ffi_diagnostics.rs  ffi_extended.rs  ffi_memory.rs  ffi_model_serde.rs  ffi_poses.rs  ffi_regressors.rs  floating_joints.rs  ik.rs  joint_types.rs  kinematics_derivatives_analytical.rs  model_json.rs  model_mjcf.rs  model_sdf.rs  model_serde.rs  model_urdf.rs  poses.rs  quaternion_and_config.rs  regressors.rs  rnea_derivatives_analytical.rs  rollout.rs  (+1 more)
(+6 files in other folders)
